--- a/src/index.css
+++ b/src/index.css
@@ -9,25 +9,34 @@ body,
   width: 100%;
   font-family: "Source Sans 3", "sans-serif";
 }
+
 .app {
   display: flex;
   position: relative;
 }
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
   width: 10px;
 }
 
 /* Track */
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
   background: #e0e0e0;
 }
 
 /* Handle */
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background: #888;
 }
 
 /* Handle on Hover */
 ::-webkit-scrollbar-track::hover {
   background: #555;
+}
+
+.sign-in {
+  background: #fff!important;;
+}
+.sign-in button{
+  background: #0000FF!important;;
 }
